# Concordium-Hackanton

./: .gitignore  README.md
hackanton-task2/: Cargo.toml  README.md  a.wasm.v1
hackanton-task2/src/: lib.rs
