# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "concordium_task2"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "yusakman <yusakmanullang93@gmail.com>" ]
description = "Deploy concordium smart contract"

[dependencies]
concordium-std = "5.1"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
